--- a/check2.ipynb
+++ b/check2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "import build\n",
     "loader = build.dataloader(data='dataset_v6', part=0.1, batch_size=10, shuffle=True)\n",
@@ -29,9 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 256, 65536]) torch.Size([10])\n"
+     ]
+    }
+   ],
    "source": [
     "x, y = next(iter(loader))\n",
     "print(x.shape, y.shape)"
@@ -39,36 +55,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.) tensor(1.)\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.min(), x.max())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "width = 10\n",
     "premodel = Sequential(\n",
-    "    ConvBlock(256, width, 1, shift=1),\n",
-    "    Res(GatedConvBlock(width, width, 2)),\n",
-    "    Res(GatedConvBlock(width, width, 4)),\n",
-    "    Res(GatedConvBlock(width, width, 8)),\n",
-    "    Res(GatedConvBlock(width, width, 16)),\n",
-    "    Res(GatedConvBlock(width, width, 32)),\n",
-    "    Res(GatedConvBlock(width, width, 64)),\n",
-    "    GatedConvBlock(width, 256, 128),\n",
-    "    torch.nn.Tanh(),\n",
+    "    ConvBlock(256, 1, 1, shift=1),\n",
+    "    ConvBlock(1, 256, 128)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +102,7 @@
     "        x, aux = batch\n",
     "        x += torch.randn_like(x) * self.hparams.noise\n",
     "        x_hat = self.forward(x)\n",
-    "        loss = F.mse_loss(x_hat, x)\n",
+    "        loss = F.binary_cross_entropy_with_logits(x_hat, x)\n",
     "        self.log(\"train_loss\", loss)\n",
     "        return loss\n",
     "    \n",
@@ -96,9 +113,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "\n",
+      "  | Name  | Type       | Params\n",
+      "-------------------------------------\n",
+      "0 | model | Sequential | 1.5 K \n",
+      "-------------------------------------\n",
+      "1.5 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "1.5 K     Total params\n",
+      "0.006     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1:  80%|████████  | 8/10 [00:39<00:09,  4.92s/it, loss=0.193, v_num=4] "
+     ]
+    }
+   ],
    "source": [
     "model = DaNet(module_description(premodel), noise=0.3)\n",
     "trainer = pl.Trainer(log_every_n_steps=5)\n",
