bce -> cross_entropy

--- a/check2.ipynb
+++ b/check2.ipynb
@@ -72,20 +72,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "width = 10\n",
     "premodel = Sequential(\n",
-    "    ConvBlock(256, 1, 1, shift=1),\n",
-    "    ConvBlock(1, 256, 128)\n",
+    "    ConvBlock(256, width, 1, shift=1),\n",
+    "    SkipConnected(\n",
+    "        SkipConnected(\n",
+    "            GatedConvBlock(width, width, 2),\n",
+    "            GatedConvBlock(width, width, 4),\n",
+    "            GatedConvBlock(width, width, 8),\n",
+    "        ),\n",
+    "        SkipConnected(\n",
+    "            GatedConvBlock(width, width, 16),\n",
+    "            GatedConvBlock(width, width, 32),\n",
+    "            GatedConvBlock(width, width, 64),\n",
+    "        ),\n",
+    "    ),\n",
+    "    ConvBlock(width, 256, 128),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,13 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\loops\\utilities.py:91: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
+      "  rank_zero_warn(\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
@@ -127,19 +141,29 @@
       "\n",
       "  | Name  | Type       | Params\n",
       "-------------------------------------\n",
-      "0 | model | Sequential | 1.5 K \n",
+      "0 | model | Sequential | 13.4 K\n",
       "-------------------------------------\n",
-      "1.5 K     Trainable params\n",
+      "13.4 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "1.5 K     Total params\n",
-      "0.006     Total estimated model params size (MB)\n"
+      "13.4 K    Total params\n",
+      "0.054     Total estimated model params size (MB)\n",
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:240: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 12 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1:  80%|████████  | 8/10 [00:39<00:09,  4.92s/it, loss=0.193, v_num=4] "
+      "Epoch 50:  90%|█████████ | 9/10 [01:25<00:09,  9.48s/it, loss=0.0344, v_num=5] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\trainer.py:726: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
      ]
     }
    ],
