--- a/check2.ipynb
+++ b/check2.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
     "        x, aux = batch\n",
     "        x += torch.randn_like(x) * self.hparams.noise\n",
     "        x_hat = self.forward(x)\n",
-    "        loss = F.binary_cross_entropy_with_logits(x_hat, x)\n",
+    "        loss = F.cross_entropy(x_hat, x)\n",
     "        self.log(\"train_loss\", loss)\n",
     "        return loss\n",
     "    \n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,15 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 50:  90%|█████████ | 9/10 [01:25<00:09,  9.48s/it, loss=0.0344, v_num=5] "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\trainer.py:726: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
-      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
+      "Epoch 21:  70%|███████   | 7/10 [02:06<00:54, 18.07s/it, loss=4.92, v_num=6] "
      ]
     }
    ],
@@ -180,26 +172,6 @@
    "outputs": [],
    "source": [
     "print(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# trainAR(\n",
-    "#     trial=None,\n",
-    "#     device='cpu',\n",
-    "#     loader=loader,\n",
-    "#     noise=0.1,\n",
-    "#     model=model,\n",
-    "#     optim=torch.optim.Adam(model.parameters()),\n",
-    "#     sched=None,\n",
-    "#     criterion=build.criterion(),\n",
-    "#     logger=build.logger(console=True, save_rate=1e-3, sample_rate=0.5),\n",
-    "#     epochs=10\n",
-    "# )"
    ]
   }
  ],
