--- a/check2.ipynb
+++ b/check2.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,32 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "width = 10\n",
     "premodel = Sequential(\n",
     "    ConvBlock(256, width, 1, shift=1),\n",
-    "    SkipConnected(\n",
-    "        SkipConnected(\n",
-    "            GatedConvBlock(width, width, 2),\n",
-    "            GatedConvBlock(width, width, 4),\n",
-    "            GatedConvBlock(width, width, 8),\n",
-    "        ),\n",
-    "        SkipConnected(\n",
-    "            GatedConvBlock(width, width, 16),\n",
-    "            GatedConvBlock(width, width, 32),\n",
-    "            GatedConvBlock(width, width, 64),\n",
-    "        ),\n",
-    "    ),\n",
+    "    Res(GatedConvBlock(width, width, 2)),\n",
     "    ConvBlock(width, 256, 128),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,15 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\loops\\utilities.py:91: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
-      "  rank_zero_warn(\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
@@ -141,21 +128,19 @@
       "\n",
       "  | Name  | Type       | Params\n",
       "-------------------------------------\n",
-      "0 | model | Sequential | 13.4 K\n",
+      "0 | model | Sequential | 10.9 K\n",
       "-------------------------------------\n",
-      "13.4 K    Trainable params\n",
+      "10.9 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "13.4 K    Total params\n",
-      "0.054     Total estimated model params size (MB)\n",
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:240: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 12 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  rank_zero_warn(\n"
+      "10.9 K    Total params\n",
+      "0.044     Total estimated model params size (MB)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 21:  70%|███████   | 7/10 [02:06<00:54, 18.07s/it, loss=4.92, v_num=6] "
+      "Epoch 0:  10%|█         | 1/10 [00:16<02:25, 16.17s/it, loss=5.55, v_num=8]"
      ]
     }
    ],
