--- a/check.ipynb
+++ b/check.ipynb
@@ -156,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0:   0%|          | 0/10 [00:00<?, ?it/s] "
+      "Epoch 14:  60%|██████    | 6/10 [00:19<00:13,  3.26s/it, loss=4.36, v_num=7] "
      ]
     }
    ],
