removed alpha, relu -> mish

--- a/check.ipynb
+++ b/check.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,13 +31,13 @@
    ],
    "source": [
     "import build\n",
-    "loader = build.dataloader(data='dataset_v6', part=0.1, batch_size=10, shuffle=True)\n",
+    "loader = build.dataloader(data='dataset_v6', sample_length=4096, part=0.1, batch_size=10, shuffle=True)\n",
     "print(len(loader))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,36 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "width = 128\n",
-    "premodel = Sequential(\n",
-    "    CausalConv(256, width, 1, 1, shift=1),\n",
-    "\n",
-    "    Res(GatedConvBlock(width, width, 1)),\n",
-    "    Res(GatedConvBlock(width, width, 2)),\n",
-    "    Res(GatedConvBlock(width, width, 4)),\n",
-    "    Res(GatedConvBlock(width, width, 8)),\n",
-    "\n",
-    "    Res(GatedConvBlock(width, width, 16)),\n",
-    "    Res(GatedConvBlock(width, width, 32)),\n",
-    "    Res(GatedConvBlock(width, width, 64)),\n",
-    "    Res(GatedConvBlock(width, width, 128)),\n",
-    "\n",
-    "    Res(GatedConvBlock(width, width, 256)),\n",
-    "    Res(GatedConvBlock(width, width, 512)),\n",
-    "    Res(GatedConvBlock(width, width, 1024)),\n",
-    "    Res(GatedConvBlock(width, width, 2048)),\n",
-    "\n",
-    "    CausalConv(width, 256, 1, 1),\n",
-    ")"
+    "premodel = WaveNet(layers=10, blocks=4, residual_channels=16, skip_channels=16, end_channels=64, classes=256)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,33 +110,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\loops\\utilities.py:91: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
+      "  rank_zero_warn(\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
+      "Missing logger folder: c:\\home\\ml\\MusicBox\\lightning_logs\n",
       "\n",
-      "  | Name  | Type       | Params\n",
-      "-------------------------------------\n",
-      "0 | model | Sequential | 855 K \n",
-      "-------------------------------------\n",
-      "855 K     Trainable params\n",
+      "  | Name  | Type    | Params\n",
+      "----------------------------------\n",
+      "0 | model | WaveNet | 85.8 K\n",
+      "----------------------------------\n",
+      "85.8 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "855 K     Total params\n",
-      "3.422     Total estimated model params size (MB)\n"
+      "85.8 K    Total params\n",
+      "0.343     Total estimated model params size (MB)\n",
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:240: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 12 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 14:  60%|██████    | 6/10 [00:19<00:13,  3.26s/it, loss=4.36, v_num=7] "
+      "Epoch 141:  40%|████      | 4/10 [00:09<00:14,  2.35s/it, loss=3.87, v_num=0] "
      ]
     }
    ],
@@ -168,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
