--- a/check.ipynb
+++ b/check.ipynb
@@ -141,7 +141,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 141:  40%|████      | 4/10 [00:09<00:14,  2.35s/it, loss=3.87, v_num=0] "
+      "Epoch 181:  90%|█████████ | 9/10 [00:20<00:02,  2.33s/it, loss=3.78, v_num=0] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\trainer.py:726: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
      ]
     }
    ],
