added move to right device

--- a/sampling.ipynb
+++ b/sampling.ipynb
@@ -8,20 +8,20 @@
    "source": [
     "import librosa\n",
     "import matplotlib.pyplot as plt\n",
+    "import neptune.new as neptune\n",
     "import numpy as np\n",
     "import pytorch_lightning as pl\n",
     "import soundfile\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
-    "from torch.utils.data import DataLoader\n",
     "from matplotlib import pyplot as plt\n",
+    "from torch.utils.data import DataLoader\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "import build\n",
     "from dct import isdct, sdct\n",
     "from models import *\n",
-    "from train import generate\n",
-    "from mu_law import mu_encode, mu_decode"
+    "from mu_law import mu_decode, mu_encode"
    ]
   },
   {
@@ -58,7 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = DaNet.load_from_checkpoint('Data/epoch=16-step=170.ckpt')"
+    "project = neptune.init_project(name=\"mlxa/MusicBox\", api_token=\"eyJhcGlfYWRkcmVzcyI6Imh0dHBzOi8vYXBwLm5lcHR1bmUuYWkiLCJhcGlfdXJsIjoiaHR0cHM6Ly9hcHAubmVwdHVuZS5haSIsImFwaV9rZXkiOiI5NTIzY2UxZC1jMjI5LTRlYTQtYjQ0Yi1kM2JhMGU1NDllYTIifQ==\")\n",
+    "project['middle1'].download('model.ckpt')\n",
+    "model = DaNet.load_from_checkpoint('model.ckpt')"
    ]
   },
   {
